--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ html {
 
 
 /*
-    \\STANDALONE RULES
+    \\HEADER NAV
 */
 #header, #main {
     display: flex;
@@ -46,6 +46,7 @@ html {
     color: var(--WHITE-DARKER);
     padding-top: 100px;
     width: 100%;
+
 }
 #nav-bar {
     width: 100%;
@@ -55,6 +56,7 @@ html {
     position: fixed;
     top: 0;
     background-color: var(--BLACK);
+    z-index: 1;
 }
 .nav-link, .nav-link:visited, #gamakay-link {
     color: var(--WHITE-DARKER);
@@ -76,15 +78,19 @@ html {
     padding: 5px 15px;
     border-radius: 4px;
 }
+.nav-link-buy:hover {
+    background-color: var(--WHITE-DARKER);
+    color: var(--BLACK);
+
+    transition: all .2s ;
+}
 #header-title {
     text-transform: uppercase;
     font-size: 3.3rem;
     font-weight: 900;
     letter-spacing: .1rem;
-
-    /* overflow: hidden; */
-    /* background: var(--BLACK); */
     position: relative;
+    text-align: center;
 }
 /* - Title animation*/
 @keyframes colorAnimation {
@@ -92,7 +98,7 @@ html {
         background-position: 0%;
     }
     100% {
-        background-position: 700%;
+        background-position: 1000%;
     }
 }
 .color-animation {
@@ -129,6 +135,10 @@ html {
     width: 90%;
     max-width: 1200px;
 }
+
+/*
+    \\MAIN
+*/
 
 #main {
     background-color: var(--WHITE-DARKER);
@@ -187,18 +197,50 @@ html {
 #subtitle-2, #subtitle-3 {
     margin-bottom: 25px;
 }
+
+
+/* 
+    \Take a look
+*/
 #overview {
     padding-top: 80px;
 }
+.keyboard-box {
+    margin: 20px auto 0 auto;
+    background-color: var(--WHITE);
+    border-radius: 10px;
+    padding: 50px;
+    margin-top: 30px;
+}
+.keyboard-box__title {
+    text-align: center;
+    font-size: 2.3rem;
+    margin-bottom: 10px;
+}
+.keyboard-box__list {
+    text-align: center;
+    list-style: none;
+    font-size: 1.2rem;
+}
+
+
+/*
+    \\FOOTER
+*/
 .footer {
     background-color: var(--BLACK);
     width: 100%;
 }
 #buy {
     margin-top: 80px;
-    padding: 40px;
-
+    height: 124px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
+/*
+    \btn-buy
+*/
 #btn-buy {
     background-color: var(--WHITE-DARKER);
     color: var(--BLACK);
@@ -214,12 +256,38 @@ html {
     justify-content: center;
     margin-left: auto;
     margin-right: auto;
+    transition: all .2s;
+
 }
+#btn-buy:hover {
+    cursor: pointer;
+    font-size: 1.5rem;
+}
+.buyBtnAnimation {
+    background: linear-gradient(
+        90deg,
+        #e54cff,
+        #00c2ff,
+        #ffc640,
+        #33ffff,
+        #33ff8c,
+        #00c2ff,
+        #ffc640,
+        #33ff8c,
+        #e54cff
+    );
+    background-size: 1000%;
+    animation: colorAnimation 90s linear infinite;
+}
+
+/*
+    \Want to know more?
+*/
 #newsletter {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-bottom: 40px;
+    padding-bottom: 60px;
 }
 #subtitle-3 {
     color: var(--WHITE-DARKER);
@@ -228,6 +296,7 @@ html {
     color: var(--WHITE-DARKER);
     margin-bottom: 20px;
     font-size: 1.2rem;
+    text-align: center;
 }
 #form {
     display: flex;
@@ -236,14 +305,28 @@ html {
 }
 #email {
     font-size: 1rem;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
+}
+#email:focus {
+    outline: none;
 }
 #submit {
     font-size: 1.1rem;
+    background-color: var(--WHITE-DARKER);
+    color: var(--BLACK);
+    border: none;
+    height: 40px;
+    width: 100px;
+    font-family: 'Overpass', sans-serif;
+}
+#submit:hover {
+    cursor: pointer;
 }
 #email, #submit {
     padding: 5px;
     border-radius: 5px;
 }
+
+
 
 
