--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ html {
     text-align: center;
     list-style: none;
 }
-#features {
+#features, #overview {
     width: 90%;
     max-width: 1080px;
 }
@@ -202,15 +202,24 @@ html {
 /* 
     \Take a look
 */
+
+#video {
+    width: 560px;
+    height: 315px;
+}
 #overview {
     padding-top: 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
 }
 .keyboard-box {
-    margin: 20px auto 0 auto;
     background-color: var(--WHITE);
     border-radius: 10px;
     padding: 50px;
     margin-top: 30px;
+    width: 560px;
 }
 .keyboard-box__title {
     text-align: center;
@@ -257,11 +266,19 @@ html {
     margin-left: auto;
     margin-right: auto;
     transition: all .2s;
-
 }
 #btn-buy:hover {
     cursor: pointer;
     font-size: 1.5rem;
+}
+/* btn animation*/
+@keyframes btnColorAnimation {
+    0% {
+        background-position: 0%;
+    }
+    100% {
+        background-position: 1000%;
+    }
 }
 .buyBtnAnimation {
     background: linear-gradient(
@@ -271,13 +288,10 @@ html {
         #ffc640,
         #33ffff,
         #33ff8c,
-        #00c2ff,
-        #ffc640,
-        #33ff8c,
         #e54cff
     );
-    background-size: 1000%;
-    animation: colorAnimation 90s linear infinite;
+    background-size: 500%;
+    animation: btnColorAnimation 70s linear infinite;
 }
 
 /*
@@ -327,6 +341,59 @@ html {
     border-radius: 5px;
 }
 
+/*
+    \\MEDIA QUERIES
+*/
+@media (max-width: 850px) {
+    .features-item {
+        padding: 50px;
+    }
+}
 
+@media (max-width: 750px) {
+    .features-title {
+        font-size: 2rem;
+        line-height: 1.1;
+    }
+}
 
+@media (max-width: 680px) {
+    .subtitle {
+        font-size: 2.5rem;
+    }
+    .subtitle-list {
+        font-size: 1.3rem;
+    }
+    .features-item {
+        grid-template-columns: 1fr;
+    }
+    .features-item:nth-of-type(2n) .features-img{
+        order: 0;
+    }
+    .features-paragraph {
+        margin-bottom: 30px;
+    }
+}
 
+@media (max-width: 610px) {
+    #video {
+        width: calc(90vw);
+        height: calc(50.625vw) ;
+    }
+    #overview {
+        width: 100%;
+    }
+    .keyboard-box {
+        width: 90%;
+    }
+    #newsletter {
+        padding: 30px;
+        padding-bottom: 60px;
+    }
+}
+
+@media (max-width: 400px) {
+    .features-item, .keyboard-box {
+        padding: 30px;
+    }
+}
