--- a/style.css
+++ b/style.css
@@ -34,6 +34,16 @@ html {
 
 
 /*
+    \\STANDALONE RULES
+*/
+.hidden {
+    visibility: collapse;
+}
+
+
+
+
+/*
     \\HEADER NAV
 */
 #header, #main {
@@ -67,10 +77,20 @@ html {
     font-weight: 700;
 
 }
+#nav-mobile-btn {
+    visibility: collapse;
+    margin-right: 5px;
+    font-size: 1.5rem;
+}
+#nav-mobile-btn:hover {
+    cursor: pointer;
+}
 #gamakay-link {
     text-transform: uppercase;
     font-weight: 900;
     font-size: 1.1rem;
+}
+#void-space {
     flex-grow: 1;
 }
 .nav-link:last-of-type {
@@ -135,6 +155,9 @@ html {
     width: 90%;
     max-width: 1200px;
 }
+
+
+
 
 /*
     \\MAIN
@@ -373,6 +396,9 @@ html {
     .features-paragraph {
         margin-bottom: 30px;
     }
+    
+    
+    
 }
 
 @media (max-width: 610px) {
@@ -390,6 +416,47 @@ html {
         padding: 30px;
         padding-bottom: 60px;
     }
+
+    #nav-mobile-btn {
+        visibility: visible;
+    }
+    .nav-link:nth-of-type(2), .nav-link:nth-of-type(3) {
+        /* visibility: collapse; */
+        display: none;
+        
+    }
+
+    /*
+    \\MOBILE NAV
+    */
+    #nav-mobile {
+        background-color: var(--BLACK);
+        position: fixed;
+        left: 0;
+        top: 48px;
+        width: 100%;
+        z-index: 2;
+        display: flex;
+        flex-direction: column;
+        padding: 10px;
+        box-shadow: 0 5px 3px 3px rgba(0, 0, 0, .5);
+    }
+    .nav-mobile-link {
+        font-weight: 700;
+        font-size: 1.2rem;
+    }
+    .nav-mobile-link:first-of-type {
+        margin-bottom: 5px;
+    }
+    .nav-mobile-link, .nav-mobile-link:visited{
+        color: var(--WHITE-DARKER);
+        text-decoration: none;
+        text-align: center;
+    }
+    .nav-mobile-link:hover {
+        color: var(--WHITE);
+    }
+
 }
 
 @media (max-width: 400px) {
